--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- banner -->
     <div id="banner">
-      <img class="banner-img" src="/images/banner.jpg" alt="banner" />
+      <img class="banner-img" src="./images/banner.jpg" alt="banner" />
       <div class="banner-intro">
         <h1>Nguyễn Hải Hà</h1>
         <span>Full Stack Developer</span>
