--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css/laptop.css" />
     <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/font.css" />
+    <link rel="stylesheet" href="./css/font.css">
+
     <link rel="stylesheet" href="./digital/digital-cv.html">
     <link rel="stylesheet" href="./digital/digital-web.html">
     <link rel="stylesheet" href="./digital/digital-new.html">
@@ -42,7 +43,7 @@
           ><i class="icon icon-doc-text-inv m-0"></i>Lý lịch</a
         >
         <a href="#" id="avatar" class="lg">
-          <img src="/images/default-avatar.webp" alt="" />
+          <img src="./images/default-avatar.webp" alt="" />
         </a>
         <a class="nav text-dark text-decoration-none" href="#"><i class="icon icon-mail-alt m-0"></i>Chứng chỉ</a>
         <a class="nav text-dark text-decoration-none" href="#"><i class="icon icon-star-1 m-0"></i>Dự Án</a>
@@ -336,7 +337,7 @@
       </div>
 
       <div id="container-certificate">
-        <img id="cer_img1" src="/images/Cert_DBI.png" alt="DBI" />
+        <img id="cer_img1" src="./images/Cert_DBI.png" alt="DBI" />
         <div class="certificate" id="cer_1">
           <h5>CHỨNG CHỈ LẬP TRÌNH WEB - FUNIX</h5>
           <p>- Chứng chỉ thuộc chương trình CCDN <br />- GPA: 8.6</p>
@@ -344,7 +345,7 @@
 
         <div id="border-1" class="border"></div>
 
-        <img id="cer_img2" src="/images/Cert_PRF.png" alt="PRF" />
+        <img id="cer_img2" src="./images/Cert_PRF.png" alt="PRF" />
         <div class="certificate" id="cer_2">
           <h5>CHỨNG CHỈ LẬP TRÌNH JAVASCRIPT - FUNIX</h5>
           <p>- Chứng chỉ thuộc chương trình CCDN <br />- GPA: 8.9</p>
@@ -353,7 +354,7 @@
         <div id="border-2" class="border"></div>
 
         <img id="cer_img3"
-          src="/images/Cert_WEB.png"
+          src="./images/Cert_WEB.png"
           alt="WEB"
         />
         <div class="certificate" id="cer_3">
@@ -371,7 +372,7 @@
       <div class="project d-flex">
       <!-- CV -->
         <div id="CV" >
-          <img src="/images/project_1.png" alt="project_1" />
+          <img src="./images/project_1.png" alt="project_1" />
           <div class="name-web"><a href="./digital/digital-cv.html" target="_blank"></a>
             <h6>CV CÁ NHÂN</h6>
           </div>
@@ -407,7 +408,7 @@
 
         <!-- WEB-P -->
         <div id="Web_P">
-          <img src="/images/project_2.png" alt="project_2" />
+          <img src="./images/project_2.png" alt="project_2" />
           <div class="name-web"><a href="./digital/digital-web.html" target="_blank">
             <h6>TRANG WEB QUẢN LÝ THÚ CƯNG</h6></a>
           </div>
@@ -442,7 +443,7 @@
 
         <!-- WEB-N -->
         <div id="Web_N">
-          <img src="/images/project_3.png" alt="project_3" />
+          <img src="./images/project_3.png" alt="project_3" />
           <div class="name-web"><a href="./digital/digital-new.html" target="_blank"></a>
             <h6>TRANG WEB XEM TIN TỨC</h6>
           </div>
