--- a/digital/digital-cv.html
+++ b/digital/digital-cv.html
@@ -16,252 +16,250 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/digital/digital-cv.css" />
+    <link rel="stylesheet" href="/css/digital/digital-web.css" />
     <title>Digital CV</title>
   </head>
   <body class="bg-primary">
     <section>
-      <div class="container" style="margin: 40px 20px;">
+      <div class="container">
         <div class="col">
-          <div class="row">
-            <!-- Goal -->
-            <div class="goals col-8 bg-white" style="border: 1px solid">
-              <div class="section">
-                <div class="section-title"><h2>Goals</h2></div>
-                <div class="border"></div>
-
-                <div class="section-content m-2">
-                  <div class="content goals-content">
-                    <div class="ic">
-                      <i
-                        class="fs-2 mt-1 fa-sharp fa-solid fa-flag-checkered"
-                      ></i>
-                    </div>
-                    <div>
-                      <h4>Goal 1</h4>
-                      <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                  </div>
-                  <div class="border"></div>
-
-                  <div class="content goals-content">
-                    <div class="ic">
-                      <i
-                        class="fs-2 mt-1 fa-sharp fa-solid fa-flag-checkered"
-                      ></i>
-                    </div>
-                    <div>
-                      <h4>Goal 2</h4>
-                      <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                  </div>
-                  <div class="border"></div>
-
-                  <div class="content goals-content">
-                    <div class="ic">
-                      <i class="fa-sharp fa-solid fa-flag-checkered"></i>
-                    </div>
-                    <div>
-                      <h4>Goal 3</h4>
-                      <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Team-->
-            <div class="team col-4 bg-white" style="border: 1px solid">
-              <div class="section">
-                <div class="section-title">
-                  <h2>Team</h2>
-                </div>
-                <div class="border"></div>
-
-                <div class="section-content m-2">
-                  <div class="content">
-                    <div class="ic"><i class="fa-solid fa-user"></i></div>
-                    <div>
-                      <h4>Member 01</h4>
-                      <p>Name:...</p>
-                    </div>
-                  </div>
-                  <div class="content">
-                    <div class="ic"><i class="fa-solid fa-user"></i></div>
-                    <div>
-                      <h4>Member 02</h4>
-                      <p>Name:...</p>
-                    </div>
-                  </div>
-                  <div class="content">
-                    <div class="ic"><i class="fa-solid fa-user"></i></div>
-                    <div>
-                      <h4>Member 03</h4>
-                      <p>Name:...</p>
-                    </div>
-                  </div>
-                  <div class="content">
-                    <div class="ic"><i class="fa-solid fa-user"></i></div>
-                    <div>
-                      <h4>Member 04</h4>
-                      <p>Name:...</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <!-- Scopes -->
-            <div class="scopes col-8 bg-white" style="border: 1px solid">
-              <div class="section">
-                <div class="section-title"><h2>Scopes</h2></div>
-                <div class="border"></div>
-
-                <div class="section-content m-3">
-                  <div class="socpes-content me-3">
-                    <div><h3>IN</h3></div>
-                    <div>
-                      <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Vel, ut?
-                      </p>
-                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Consequatur, iusto.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="socpes-content">
-                    <div><h3>OUT</h3></div>
-                    <div>
-                      <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Vel, ut?
-                      </p>
-                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Consequatur, iusto.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Primary -->
-            <div class="primary col-4 bg-white" style="border: 1px solid">
-              <div class="section">
-                <div class="section-title"><h2>Primary</h2></div>
-                <div class="border"></div>
-
-                <div class="section-content m-2">
-                  <div class="content">
-                    <div class="ic">
-                      <i class="fa-solid fa-circle-question"></i>
-                    </div>
-                    <div>
-                      <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Voluptatibus officia aut fugit quo maxime in!
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="content">
-                    <div class="ic">
-                      <i class="fa-solid fa-circle-question"></i>
-                    </div>
-                    <div>
-                      <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Repudiandae alias, ipsam praesentium consectetur
-                        aliquam eum.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col col-8">
-          <!-- Timeline -->
-          <div
-            class="bg-white timeline"
-            style="border: 1px solid"
-          >
+        <div class="row">
+          <!-- Goal -->
+          <div class="goals col-7 bg-white" style="border: 1px solid">
             <div class="section">
-              <div class="section-title"><h2>Timeline</h2></div>
+              <div class="section-title"><h2>Goals</h2></div>
               <div class="border"></div>
 
               <div class="section-content m-2">
-                <div class="timeline-content">
-                  <div class="timeline" style="list-style-type: none">
-                    <div class="grid-content">
-                      <div class="num-list fs-1 mx-3 ">1</div>
-                      <div>
-                        <h4>Project Start</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="timeline-border"></div>
-                      </div>
-                    </div>
+                <div class="content goals-content">
+                  <div class="ic">
+                    <i
+                      class="fs-3 mt-1 fa-sharp fa-solid fa-flag-checkered"
+                    ></i>
+                  </div>
+                  <div>
+                    <h4>Goal 1</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+                <div class="border"></div>
 
-                    <div class="grid-content">
-                      <div class="num-list fs-1 mx-3 ">2</div>
-                      <div>
-                        <h4>Project Date</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="timeline-border"></div>
-                      </div>
-                    </div>
+                <div class="content goals-content">
+                  <div class="ic">
+                    <i
+                      class="fs-3 mt-1 fa-sharp fa-solid fa-flag-checkered"
+                    ></i>
+                  </div>
+                  <div>
+                    <h4>Goal 2</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+                <div class="border"></div>
 
-                    <div class="grid-content">
-                      <div class="num-list fs-1 mx-3 ">3</div>
-                      <div>
-                        <h4>Project Date</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="timeline-border"></div>
-                      </div>
-                    </div>
+                <div class="content goals-content">
+                  <div class="ic">
+                    <i class="fs-3 mt-1 fa-sharp fa-solid fa-flag-checkered"></i>
+                  </div>
+                  <div>
+                    <h4>Goal 3</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
-                    <div class="grid-content">
-                      <div class="num-list fs-1 mx-3 ">4</div>
-                      <div>
-                        <h4>Project Date</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="timeline-border"></div>
-                      </div>
-                    </div>
+          <!-- Team-->
+          <div class="team col-4 bg-white" style="border: 1px solid">
+            <div class="section">
+              <div class="section-title">
+                <h2>Team</h2>
+              </div>
+              <div class="border"></div>
 
-                    <div class="grid-content">
-                      <div class="num-list fs-1 mx-3 ">5</div>
-                      <div>
-                        <h4>Project Date</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="timeline-border"></div>
-                      </div>
-                    </div>
+              <div class="section-content m-2">
+                <div class="content">
+                  <div class="ic"><i class="fa-solid fa-user"></i></div>
+                  <div>
+                    <h4>Member 01</h4>
+                    <p>Name:...</p>
+                  </div>
+                </div>
+                <div class="content">
+                  <div class="ic"><i class="fa-solid fa-user"></i></div>
+                  <div>
+                    <h4>Member 02</h4>
+                    <p>Name:...</p>
+                  </div>
+                </div>
+                <div class="content">
+                  <div class="ic"><i class="fa-solid fa-user"></i></div>
+                  <div>
+                    <h4>Member 03</h4>
+                    <p>Name:...</p>
+                  </div>
+                </div>
+                <div class="content">
+                  <div class="ic"><i class="fa-solid fa-user"></i></div>
+                  <div>
+                    <h4>Member 04</h4>
+                    <p>Name:...</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-                    <div class="grid-content">
-                      <div class="num-list fs-1 mx-3 ">6</div>
-                      <div>
-                        <h4>Project Date</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="timeline-border"></div>
-                      </div>
-                    </div>
+        <div class="row">
+          <!-- Scopes -->
+          <div class="scopes col-7 bg-white" style="border: 1px solid">
+            <div class="section">
+              <div class="section-title"><h2>Scopes</h2></div>
+              <div class="border"></div>
 
-                    <div class="grid-content">
-                      <div class="num-list fs-1 mx-3 ">7</div>
-                      <div>
-                        <h4>Project Date</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <!-- <div class="timeline-border"></div> -->
-                      </div>
+              <div class="section-content scopes-content m-3">
+                <div class="me-3">
+                  <div><h3>IN</h3></div>
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Vel, ut?
+                    </p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Consequatur, iusto.
+                    </p>
+                  </div>
+                </div>
+
+                <div>
+                  <div><h3>OUT</h3></div>
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Vel, ut?
+                    </p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Consequatur, iusto.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Primary -->
+          <div class="primary col-4 bg-white" style="border: 1px solid">
+            <div class="section">
+              <div class="section-title"><h2>Primary</h2></div>
+              <div class="border"></div>
+
+              <div class="section-content m-2">
+                <div class="content">
+                  <div class="ic">
+                    <i class="fa-solid fa-circle-question"></i>
+                  </div>
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Voluptatibus officia aut fugit quo maxime in!
+                    </p>
+                  </div>
+                </div>
+
+                <div class="content">
+                  <div class="ic">
+                    <i class="fa-solid fa-circle-question"></i>
+                  </div>
+                  <div>
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Repudiandae alias, ipsam praesentium consectetur aliquam
+                      eum.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+
+      <div class="container">
+        <div class="col">
+        <!-- Timeline -->
+        <div class="bg-white timeline row" style="border: 1px solid">
+          <div class="section">
+            <div class="section-title"><h2>Timeline</h2></div>
+            <div class="border"></div>
+
+            <div class="section-content m-2">
+              <div class="timeline-content">
+                <div class="timeline" style="list-style-type: none">
+                  <div class="grid-content">
+                    <div class="num-list fs-1 mx-3">1</div>
+                    <div>
+                      <h4>Project Start</h4>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                      <div class="timeline-border"></div>
+                    </div>
+                  </div>
+
+                  <div class="grid-content">
+                    <div class="num-list fs-1 mx-3">2</div>
+                    <div>
+                      <h4>Project Date</h4>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                      <div class="timeline-border"></div>
+                    </div>
+                  </div>
+
+                  <div class="grid-content">
+                    <div class="num-list fs-1 mx-3">3</div>
+                    <div>
+                      <h4>Project Date</h4>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                      <div class="timeline-border"></div>
+                    </div>
+                  </div>
+
+                  <div class="grid-content">
+                    <div class="num-list fs-1 mx-3">4</div>
+                    <div>
+                      <h4>Project Date</h4>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                      <div class="timeline-border"></div>
+                    </div>
+                  </div>
+
+                  <div class="grid-content">
+                    <div class="num-list fs-1 mx-3">5</div>
+                    <div>
+                      <h4>Project Date</h4>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                      <div class="timeline-border"></div>
+                    </div>
+                  </div>
+
+                  <div class="grid-content">
+                    <div class="num-list fs-1 mx-3">6</div>
+                    <div>
+                      <h4>Project Date</h4>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                      <div class="timeline-border"></div>
+                    </div>
+                  </div>
+
+                  <div class="grid-content">
+                    <div class="num-list fs-1 mx-3">7</div>
+                    <div>
+                      <h4>Project Date</h4>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                      <!-- <div class="timeline-border"></div> -->
                     </div>
                   </div>
                 </div>
@@ -269,6 +267,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
 
