--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           ><i class="icon icon-doc-text-inv m-0"></i>Lý lịch</a
         >
         <a href="#" id="avatar" class="lg">
-          <img src="./images/default-avatar.webp" alt="" />
+          <img src="./images/avatar.jpg" alt="" />
         </a>
         <a class="nav text-dark text-decoration-none" href="#"><i class="icon icon-mail-alt m-0"></i>Chứng chỉ</a>
         <a class="nav text-dark text-decoration-none" href="#"><i class="icon icon-star-1 m-0"></i>Dự Án</a>
@@ -228,7 +228,7 @@
             <i class="ic ic-hotairballoon"></i>
             <i class="ic ic-basket"></i>
             <p class="fs-6 m-2">Âm nhạc</p>
-            <p class="fs-6 m-2">Chơi game</p>
+            <p class="fs-6 my-2 mx-1">Chơi game</p>
             <p class="fs-6 my-2 mx-3" style="margin-left: 25px">Du lịch</p>
             <p class="fs-6 my-2 mx-3" style="margin-left: 25px">Nấu ăn</p>
           </div>
