--- a/digital/digital-new.html
+++ b/digital/digital-new.html
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/digital/digital-web.css" />
-    <title>Digital CV</title>
+    <link rel="stylesheet" href="/digital/digital-new.css" />
+    <title>Digital New</title>
   </head>
   <body class="bg-primary">
     <section>
