--- a/digital/digital-new.html
+++ b/digital/digital-new.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/digital/digital-new.css" />
+    <link rel="stylesheet" href="./digital-new.css" />
     <title>Digital New</title>
   </head>
   <body class="bg-primary">
